Update project name to JSchema

--- a/doc/hugo.toml
+++ b/doc/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://relogiclabs.github.io/JsonSchema-Java"
+baseURL = "https://relogiclabs.github.io/JSchema-Java"
 languageCode = "en-us"
 title = "New Json Schema"
 
